// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <div>
    <input
      id="checkbox-in-color-context"
      type="checkbox"
      checked
      aria-describedby="checkbox-in-color-context:description:1"
    >
    <label
      data-weight="regular"
      for="checkbox-in-color-context"
    >
      Checkbox label
    </label>
    <div
      data-field="description"
      id="checkbox-in-color-context:description:1"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`Focused 1`] = `
<div>
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="checkbox-preview:description:1"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="checkbox-preview:description:1"
  >
    Description
  </div>
</div>
`;

exports[`One Option 1`] = `
<fieldset>
  <legend data-weight="medium">
    Bekreft at du er over 18 år
  </legend>
  <p data-variant="default">
    For at vi skal kunne sende deg opplysningen du ber om, må du bekrefte at du er myndig.
  </p>
  <div>
    <input
      id="components-checkbox--one-option"
      type="checkbox"
      value="samtykke"
    >
    <label
      data-weight="regular"
      for="components-checkbox--one-option"
    >
      Jeg bekrefter at jeg er over 18 år
    </label>
  </div>
</fieldset>
`;

exports[`Preview 1`] = `
<div>
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="checkbox-preview:description:1"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="checkbox-preview:description:1"
  >
    Description
  </div>
</div>
`;
